samples/_failures_safe/1761689336_75c0f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ccdc71f9.c: In function ‘main’:
./samples/SAFE/__tmp_ccdc71f9.c:150:9: error: expected expression at end of input
  150 |         double ratio = (1.0 - (double)compressed_buf.size / (
      |         ^~~~~~
./samples/SAFE/__tmp_ccdc71f9.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ccdc71f9.c:150:9: error: expected declaration or statement at end of input
